--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Commons Tab</title>
     <script src="js/jquery/jquery.min.js"></script>
     <script src="js/vegas/vegas.js"></script>
+    <script src="js/photos.json"></script>
     <script src="js/app.js"></script>
     <link rel="stylesheet" href="css/vegas/vegas.css">
     <link rel="stylesheet" href="css/app.css">
@@ -13,7 +14,7 @@
         <div class="get-it">
             <h1>Commons Tab</h1>
             <p class="subtitle">Beautiful freely licensed and public domain images for your Chrome tabs, from Wikimedia Commons.</p>
-            <a href=""><img src="https://developer.chrome.com/webstore/images/ChromeWebStore_BadgeWBorder_v2_206x58.png"></a>
+            <a href="https://chrome.google.com/webstore/detail/commons-tab/afbiobjnggllnimnbhddficgaigcfmcp"><img src="img/ChromeWebStoreBadge.png" alt="Download in the Chrome Web Store"></a>
             <p class="credit">Built by <a href="https://twitter.com/sklaporte">Stephen LaPorte</a>. Code <a href="https://github.com/slaporte/commons-tab">on github</a>. More from <a href="http://blog.hatnote.com/">Hatnote</a>.</p>
         </div>
     </div>
